recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:12: error: value ++ is not a member of Int
	i++
         ^